--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -1,14 +1,17 @@
 name: Waka Readme
-
+ 
 on:
+  push:
+    branches:
+      - master
   workflow_dispatch:
   schedule:
     # Runs at 12am UTC
-    - cron: "0 0 * * *"
-
+    - cron: '0 0 * * *'
+ 
 jobs:
   update-readme:
-    name: WakaReadme DevMetrics
+    name: Update this repo's README 
     runs-on: ubuntu-latest
     steps:
       - uses: imkaics/waka-readme@master
