--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -16,6 +16,7 @@ jobs:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           SHOW_TITLE: true
           BLOCKS: ⣀⣄⣤⣦⣶⣷⣿
+          CODE_LANG: python # 基于语言语法的突出显示文本
           TIME_RANGE: all_time
           SHOW_TIME: true
           SHOW_MASKED_TIME: true
