--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -1,6 +1,9 @@
 name: Waka Readme
 
 on:
+  push:
+    branches:
+      - master
   workflow_dispatch:
   schedule:
     # Runs at China time 00:00:00
