--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -35,10 +35,10 @@ jobs:
       - uses: imkaics/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          SHOW_TITLE: true
+          # SHOW_TITLE: true
           BLOCKS: ⣀⣄⣤⣦⣶⣷⣿
           # CODE_LANG: python # 基于语言语法的突出显示文本
           TIME_RANGE: all_time
-          SHOW_TIME: true
+          SHOW_TIME: false
           SHOW_MASKED_TIME: true
           LANG_COUNT: 10
