--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -39,6 +39,6 @@ jobs:
           BLOCKS: ⣀⣄⣤⣦⣶⣷⣿
           # CODE_LANG: python # 基于语言语法的突出显示文本
           TIME_RANGE: all_time
-          SHOW_TIME: false
+          SHOW_TIME: true
           SHOW_MASKED_TIME: true
           LANG_COUNT: 10
